--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Shane's Portfolio</title>
 </head>
 <body>
-    
+    <div id="header">
+        <div class="container">
+            <nav class="nav-bar">
+                <img src="./img/logo-stock2.png" alt="logo" class="logo">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </body>
 </html>
