styling nav bar, trying to make it interactive

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="header">
-        <div class="container">
-            <nav class="nav-bar">
+        <div class="nav-container">
+            <nav>
                 <img src="./img/logo-stock2.png" alt="logo" class="logo">
                 <ul>
                     <li><a href="#">Home</a></li>
