--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </nav>
+            <div class="header-text">
+                <p>Front End Developer</p>
+                <h1>Hi, I'm Shane Junior Software Developer</h1>
+            </div>
         </div>
     </div>
 </body>
