--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
             <div class="header-text">
                 <p>Front End Developer</p>
-                <h1>Hi, I'm Shane Junior Software Developer</h1>
+                <h1>Hi, I'm <span>Shane</span> <br> Junior Software Developer</h1>
             </div>
         </div>
     </div>
