added comments in html and css to find styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Shane's Portfolio</title>
 </head>
 <body>
+    <!--HEADER-->
     <div id="header">
         <div class="nav-container">
             <nav>
@@ -23,6 +24,19 @@
             <div class="header-text">
                 <p>Front End Developer</p>
                 <h1>Hi, I'm <span>Shane</span> <br> Junior Software Developer</h1>
+            </div>
+        </div>
+    </div>
+    <!--ABOUT-->
+    <div id="about">
+        <div class="about-container">
+            <div class="row">
+                <div class="about-col-one">
+                    <img src="./img/stock-portrait-photo-resized.jpg" alt="photo of me">
+                </div>
+                <div class="about-col-two">
+                    <h2>About Me:</h2>
+                </div>
             </div>
         </div>
     </div>
