finished part of about me section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,20 @@
                     <img src="./img/stock-portrait-photo-resized.jpg" alt="photo of me">
                 </div>
                 <div class="about-col-two">
-                    <h2>About Me:</h2>
+                    <h2 class="sub-header">About Me</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                        incididunt ut labore et dolore magna aliqua. Vestibulum lorem sed risus ultricies 
+                        tristique nulla aliquet. Sagittis vitae et leo duis ut diam quam nulla. 
+                        Blandit turpis cursus in hac habitasse platea dictumst. Sit amet massa vitae tortor condimentum. 
+                        Maecenas ultricies mi eget mauris pharetra. Et ultrices neque ornare aenean euismod elementum nisi quis.
+                         Nisl tincidunt eget nullam non nisi est sit. Neque vitae tempus quam pellentesque nec nam aliquam sem.
+                    </p>
+                    <div class="tab-titles">
+                        <p class="tab-links active-link">Skills</p>
+                        <p class="tab-links">Experience</p>
+                        <p class="tab-links">Education</p>
+                    </div>
                 </div>
             </div>
         </div>
