prepping to make tabs functional

--- a/index.html
+++ b/index.html
@@ -45,9 +45,30 @@
                          Nisl tincidunt eget nullam non nisi est sit. Neque vitae tempus quam pellentesque nec nam aliquam sem.
                     </p>
                     <div class="tab-titles">
-                        <p class="tab-links active-link">Skills</p>
-                        <p class="tab-links">Experience</p>
-                        <p class="tab-links">Education</p>
+                        <p class="tab-links active-link" onclick="openTab('skills')">Skills</p>
+                        <p class="tab-links" onclick="openTab('experience')">Experience</p>
+                        <p class="tab-links" onclick="openTab('education')">Education</p>
+                    </div>
+                    <div class="tab-contents active-tab">
+                        <ul>
+                            <li><span>UX/UI</span><br>Designing Web Interfaces</li>
+                            <li><span>Web Development</span><br>Designing Websites</li>
+                            <li><span>Lorem Ipsum</span><br>Think and fill in later</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents">
+                        <ul>
+                            <li><span>2023 - Current</span><br>Filler</li>
+                            <li><span>Filler filler</span><br>Lorem Ipsum Lorem Ipsum Lorem Ipsum</li>
+                            <li><span>Lorem Ipsum</span><br>Lorem Ipsum Lorem Ipsum Lorem Ipsum</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents">
+                        <ul>
+                            <li><span>2022</span><br>CSLB Full Stack Bootcamp</li>
+                            <li><span>Web Development</span><br>Designing Websites</li>
+                            <li><span>Lorem Ipsum</span><br>Think and fill in later</li>
+                        </ul>
                     </div>
                 </div>
             </div>
