figured out issue with javascript code, missing s in elements

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
                         <p class="tab-links" onclick="openTab('experience')">Experience</p>
                         <p class="tab-links" onclick="openTab('education')">Education</p>
                     </div>
-                    <div class="tab-contents active-tab">
+                    <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>UX/UI</span><br>Designing Web Interfaces</li>
                             <li><span>Web Development</span><br>Designing Websites</li>
                             <li><span>Lorem Ipsum</span><br>Think and fill in later</li>
                         </ul>
                     </div>
-                    <div class="tab-contents">
+                    <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>2023 - Current</span><br>Filler</li>
                             <li><span>Filler filler</span><br>Lorem Ipsum Lorem Ipsum Lorem Ipsum</li>
                             <li><span>Lorem Ipsum</span><br>Lorem Ipsum Lorem Ipsum Lorem Ipsum</li>
                         </ul>
                     </div>
-                    <div class="tab-contents">
+                    <div class="tab-contents" id="education">
                         <ul>
                             <li><span>2022</span><br>CSLB Full Stack Bootcamp</li>
                             <li><span>Web Development</span><br>Designing Websites</li>
@@ -74,5 +74,6 @@
             </div>
         </div>
     </div>
+    <script src="./index.js"></script>
 </body>
 </html>
