finished basic structure of projects section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Shane's Portfolio</title>
 </head>
 <body>
-    <!--HEADER-->
+    <!-----------HEADER------------->
     <div id="header">
         <div class="nav-container">
             <nav>
@@ -17,7 +17,6 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Projects</a></li>
-                    <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </nav>
@@ -27,7 +26,7 @@
             </div>
         </div>
     </div>
-    <!--ABOUT-->
+    <!----------------ABOUT------------->
     <div id="about">
         <div class="about-container">
             <div class="row">
@@ -70,6 +69,23 @@
                             <li><span>Lorem Ipsum</span><br>Think and fill in later</li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!------------Projects--------->
+    <div id="projects">
+        <div class="project-container">
+            <h2 class="sub-header">Projects</h2>
+            <div class="project-list">
+                <div class="project">
+                    <img src="./img/project-stock-one-resized.jpg" alt="project photo">
+                </div>
+                <div class="project">
+                    <img src="./img/project-stock-two-resized.jpg" alt="project photo">
+                </div>
+                <div class="project">
+                    <img src="./img/project-stock-three-resized.jpg" alt="project photo">
                 </div>
             </div>
         </div>
