finished frame for about, starting contact section

--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
                     </div>
                 </div>
             </div>
+            <a href="#" class="btn">See more</a>
         </div>
     </div>
+    <!------------------Contact-------------------->
     <script src="./index.js"></script>
 </body>
 </html>
