added icons for contact

--- a/index.html
+++ b/index.html
@@ -117,6 +117,24 @@
         </div>
     </div>
     <!------------------Contact-------------------->
+    <div id="container">
+        <div class="contact-container">
+            <div class="row">
+                <div class="contact-left">
+                    <h2 class="sub-header">Contact Me</h2>
+                    <p>sthomas88@live.com</p>
+                    <p>555-617-4567</p>
+                    <div class="social-icons">
+                        <a><i class="fa-brands fa-linkedin"></i></a>
+                        <a><i class="fa-brands fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="contact-right">
+
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
