unstyled contact section, styling next

--- a/index.html
+++ b/index.html
@@ -125,12 +125,17 @@
                     <p>sthomas88@live.com</p>
                     <p>555-617-4567</p>
                     <div class="social-icons">
-                        <a><i class="fa-brands fa-linkedin"></i></a>
-                        <a><i class="fa-brands fa-github"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="#"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <div class="contact-right">
-
+                    <form>
+                        <input type="text" name="name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit">Submit</button>
+                    </form>
                 </div>
             </div>
         </div>
