finished basic styling on contact left

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
             <div class="row">
                 <div class="contact-left">
                     <h2 class="sub-header">Contact Me</h2>
-                    <p>sthomas88@live.com</p>
-                    <p>555-617-4567</p>
+                    <p><i class="fa-solid fa-paper-plane"></i> sthomas88@live.com</p>
+                    <p><i class="fa-solid fa-mobile-screen"></i> 555-617-4567</p>
                     <div class="social-icons">
                         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#"><i class="fa-brands fa-github"></i></a>
