--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <input type="text" name="name" placeholder="Your Name" required>
                         <input type="email" name="email" placeholder="Your Email" required>
                         <textarea name="message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit">Submit</button>
+                        <button type="submit" class="btn btn-two">Submit</button>
                     </form>
                 </div>
             </div>
