--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
         <div class="nav-container">
             <nav>
                 <img src="./img/logo-stock2.png" alt="logo" class="logo">
-                <ul>
+                <ul id="side-menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Contacts</a></li>
+                    <i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
                 </ul>
+                <i class="fa-solid fa-bars" onclick="openMenu()"></i>
             </nav>
             <div class="header-text">
                 <p>Front End Developer</p>
