starting to work on contact form submission

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <nav>
                 <img src="./img/logo-stock2.png" alt="logo" class="logo">
                 <ul id="side-menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openMenu()"></i>
@@ -119,7 +119,7 @@
         </div>
     </div>
     <!------------------Contact-------------------->
-    <div id="container">
+    <div id="contact">
         <div class="contact-container">
             <div class="row">
                 <div class="contact-left">
