--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
                         <a href="#"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
-                <div class="contact-right">
+                <!-- <div class="contact-right">
                     <form name="submit-to-google-sheet">
                         <input type="text" name="name" placeholder="Your Name" required>
                         <input type="email" name="email" placeholder="Your Email" required>
                         <textarea name="message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn-two">Submit</button>
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
