--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <i class="fa-solid fa-bars" onclick="openMenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Front End Developer</p>
+                <p>Software Developer</p>
                 <h1>Hi, I'm <span>Shane</span> <br> Junior Software Developer</h1>
             </div>
         </div>
