--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-----------HEADER------------->
     <div id="header">
         <div class="nav-container">
-            <nav>
+            <nav class="sticky">
                 <img src="./img/logo-stock2.png" alt="logo" class="logo">
                 <ul id="side-menu">
                     <li><a href="#header">Home</a></li>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="about-col-two">
                     <h2 class="sub-header">About Me</h2>
-                    <p>
+                    <p class="about-description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                         incididunt ut labore et dolore magna aliqua. Vestibulum lorem sed risus ultricies 
                         tristique nulla aliquet. Sagittis vitae et leo duis ut diam quam nulla. 
@@ -48,29 +48,37 @@
                     </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="openTab('skills')">Skills</p>
-                        <p class="tab-links" onclick="openTab('experience')">Experience</p>
+                        <!-- <p class="tab-links" onclick="openTab('experience')">Experience</p> -->
                         <p class="tab-links" onclick="openTab('education')">Education</p>
+                        <p class="tab-links" onclick="openTab('resume')">Resume</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UX/UI</span><br>Designing Web Interfaces</li>
-                            <li><span>Web Development</span><br>Designing Websites</li>
-                            <li><span>Lorem Ipsum</span><br>Think and fill in later</li>
+                            <li>
+                                <span>Languages</span>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                </ul>
+                            </li>
+                            <!-- <li><span>Web Development</span><br>Designing Websites</li> -->
                         </ul>
                     </div>
-                    <div class="tab-contents" id="experience">
+                    <!-- <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>2023 - Current</span><br>Filler</li>
                             <li><span>Filler filler</span><br>Lorem Ipsum Lorem Ipsum Lorem Ipsum</li>
                             <li><span>Lorem Ipsum</span><br>Lorem Ipsum Lorem Ipsum Lorem Ipsum</li>
                         </ul>
-                    </div>
+                    </div> -->
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>2022</span><br>CSLB Full Stack Bootcamp</li>
-                            <li><span>Web Development</span><br>Designing Websites</li>
-                            <li><span>Lorem Ipsum</span><br>Think and fill in later</li>
                         </ul>
+                    </div>
+                    <div class="tab-contents" id="resume">
+                        <button class="resume-btn">Resume</button>
                     </div>
                 </div>
             </div>
@@ -115,7 +123,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a>
+            <!-- <a href="#" class="btn">See more</a> -->
         </div>
     </div>
     <!------------------Contact-------------------->
