added resume section and attached resume.pdf file

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                     </div> -->
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2022</span><br>CSLB Full Stack Bootcamp</li>
+                            <li><span>2022</span><br>CSULB Full Stack Bootcamp</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="resume">
-                        <button class="resume-btn">Resume</button>
+                        <a href="./resume/resume-2022.pdf" target="_blank"><button class="resume-btn">Resume</button></a>
                     </div>
                 </div>
             </div>
